@@ -30,6 +30,10 @@ nevertofsm: neverp.cmo
 	       neverl.cmo neverp.cmo  \
 	       nevertofsm.cmo
 
+dot2fsm:
+	ocamlc $(SOURCES) dot2fsm.ml
+	ocamlc -o dot2fsm $(OBJECTS) dot2fsm.cmo
+
 extractalphabet: neverp.cmo
 	ocamlc -c $(SOURCES) extractalphabet.ml
 	ocamlc -custom -ccopt -static \
@@ -59,6 +63,6 @@ doc:
 	dvipdf doc.dvi
 
 clean:
-	rm -rf nevertofsm nevertosymbols fsmcrossprod extractalphabet
+	rm -rf nevertofsm nevertosymbols fsmcrossprod extractalphabet dot2fsm
 	rm -rf dist neverl.ml neverp.ml
 	rm -rf *.mli *.cmi *.cmo *.aux *.dvi *.log *.pdf
